--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ projects:
   # hackerrank: your_username
   # instagram: your_username
   # keybase: your_username
-   linkedin: https://www.linkedin.com/in/ra921741
+   linkedin: ra921741
   # mastodon: your_username
   # medium: your_username
   # stackoverflow: your_user_id
